basic structure section 2 and 3

--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -1,5 +1,5 @@
 <section class="wrapper__section-one">
-    <div class="container section-one">
+    <main class="container section-one">
         <header class="desktop__nav-container">
             <div class="logo">
                 <span>
@@ -19,7 +19,48 @@
             <div>
                 <span>NATURE</span>
                 <p class="description">HOLISTIC HEALTH</p>
+                <component-green-bar></component-green-bar>
             </div>
         </div>
-    </div>
+    </main>
+</section>
+
+<section class="wrapper__section-two">
+    <main class="container section-two">
+        <header class="title-section">
+            <div>
+                <p>LATEST ARTICLES</p>
+                <component-green-bar></component-green-bar>
+            </div>
+        </header>
+        <div class="cards_container">
+            <component-article-card></component-article-card>
+            <component-article-card></component-article-card>
+            <component-article-card></component-article-card>
+        </div>
+    </main>
+</section>
+
+<section class="wrapper__section-three">
+    <main class="container section-three">
+        <div class="image__about-container"></div>
+        <div class="info_container">
+            <div class="about-content">
+                <header class="about-header">
+                    <p>ABOUT</p>
+                    <component-green-bar></component-green-bar>
+                </header>
+                <div class="about-text">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur <br>
+                        adipisicing elit. Nesciunt quisquam ipsa <br>
+                        facilis placeat beatae facere nostrum <br>
+                        blanditiis maiores ad dolor, iure quae! <br>
+                        Atque quibusdam recusandae corrupti <br>
+                        distinctio tempora optio non? <br>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </main>
 </section>
