--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -1,27 +1,30 @@
-@import 'all';
-@import 'palette';
-
+@import "all";
+@import "palette";
 
 $padding-container: 1rem;
 
-.wrapper__section-one {
-    width: 100%;
-    height: 100vh;
-    
-    background: red;
-    padding: $padding-container;
+section {
+  width: 100%;
+  height: 100vh;
 }
 
-.container {
-    @include fullScreenPercentege();
+.wrapper__section-one {
+  width: 100%;
+  height: 100vh;
+
+  background: red;
+  padding: $padding-container;
+
+  .container {
+    @include fullScreenPercentage();
     position: relative;
 
     display: flex;
     justify-content: center;
     background-color: green;
-}
+  }
 
-.desktop__nav-container {
+  .desktop__nav-container {
     background-color: yellow;
     width: 100%;
 
@@ -32,26 +35,93 @@ $padding-container: 1rem;
     right: 0;
 
     .list {
-        display: flex;
-        gap: 2rem;
+      display: flex;
+      gap: 2rem;
     }
-}
+  }
 
-.content_container {
+  .content_container {
     align-self: center;
 
     div {
-        text-align: center;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+    }
+  }
+}
+
+.wrapper__section-two {
+  width: 100%;
+  background: green;
+  padding: $padding-container;
+
+
+  .container {
+    @include fullScreenPercentage();
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .title-section {
+      margin-bottom: 2rem;
+  }
+
+  .title-section > div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .cards_container {
+      display: flex;
+      gap: 3rem;
+  }
+}
+
+
+.wrapper__section-three {
+    width: 100%;
+    background: yellow;
+    padding: $padding-container;
+
+    .container {
+        @include fullScreenPercentage();
         display: flex;
-        align-items: center;
-        flex-direction: column;
     }
 
-    div::after {
-        content: '';
+    .image__about-container {
+        width: 50%;
         background: red;
-        width: 1.8rem;
-        height: .3rem;
-        margin-top: 1.8rem;
+    }
+
+    .info_container {
+        width: 50%;
+        background: green;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .about-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .about-header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .about-text {
+        margin-top: 2rem;
+    }
+    .about-text > p {
+        word-wrap: wrap;
     }
 }
