--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -1,109 +1,112 @@
-<section class="wrapper__section-one">
-  <main class="container section-one">
-    <header class="desktop__nav-container">
-      <div class="logo">
-        <span>
-          <a href="#">NATURE</a>
-        </span>
-      </div>
-      <nav class="nav-list">
-        <ul class="list">
-          <li class="list-item"><a href="#">ABOUT</a></li>
-          <li class="list-item"><a href="#">ARTICLES</a></li>
-          <li class="list-item">
-            <a href="#"><button class="btn-subcribe">SUBSCRIBE</button></a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-
-    <div class="content_container">
-      <div>
-        <span>NATURE</span>
-        <p class="description">HOLISTIC HEALTH</p>
-        <component-green-bar></component-green-bar>
-      </div>
-    </div>
-  </main>
-</section>
-
-<section class="wrapper__section-two">
-  <main class="container section-two">
-    <header class="title-section">
-      <div>
-        <p>LATEST ARTICLES</p>
-        <component-green-bar></component-green-bar>
-      </div>
-    </header>
-    <div class="cards_container">
-      <component-article-card></component-article-card>
-      <component-article-card></component-article-card>
-      <component-article-card></component-article-card>
-    </div>
-  </main>
-</section>
-
-<section class="wrapper__section-three">
-  <main class="container section-three">
-    <div class="image__about-container"></div>
-    <div class="info_container">
-      <div class="about-content">
-        <header class="about-header">
-          <p>ABOUT</p>
-          <component-green-bar></component-green-bar>
-        </header>
-        <div class="about-text">
-          <p>
-            Lorem ipsum dolor sit amet consectetur <br />
-            adipisicing elit. Nesciunt quisquam ipsa <br />
-            facilis placeat beatae facere nostrum <br />
-            blanditiis maiores ad dolor, iure quae! <br />
-            Atque quibusdam recusandae corrupti <br />
-            distinctio tempora optio non? <br />
-          </p>
-        </div>
-      </div>
-    </div>
-  </main>
-</section>
-
-<section class="wrapper__section-four">
-    <div class="subscribe__container">
-        <div>
-            <header class="subscribe-title">
-                <p>SUBSCRIBE</p>
-                <p>Sign-up to out newsletter</p>
-            </header>
-            <div class="form-container">
-                <form action="">
-                    <label for="">
-                        <input type="email" placeholder="Your email">
-                    </label>
-                    <button type="button">SUBMIT</button>
-                </form>
+<div class="global-wrapper">
+    <section class="wrapper__section-one">
+        <main class="container section-one">
+          <header class="desktop__nav-container">
+            <div class="">
+              <span class="logo">
+                <a href="#">NATURE</a>
+              </span>
             </div>
-        </div>
-    </div>
-    <div class="footer-wrapper">
-      <footer class="footer-container">
-        <div>
-            <ul class="social__network-list">
-                <li><a href="#"><i class="fab fa-discord"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-            </ul>
-        </div>
-        <div class="nav-wrapper">
-          <nav class="footer__nav-list">
-            <ul class="list">
-              <li><a href="#">ABOUT</a></li>
-              <li><a href="#">ARTICLES</a></li>
-              <li><a href="#">SUBSCRIBE</a></li>
-            </ul>
-          </nav>
-        </div>
-      </footer>
-    </div>
-</section>
+            <nav class="nav-list">
+              <ul class="list">
+                <li class="list-item"><a href="#">ABOUT</a></li>
+                <li class="list-item"><a href="#">ARTICLES</a></li>
+                <li class="list-item">
+                  <a href="#"><button class="btn-subscribe">SUBSCRIBE</button></a>
+                </li>
+              </ul>
+            </nav>
+          </header>
+      
+          <div class="content_container">
+            <div>
+              <span>NATURE</span>
+              <p class="description">HOLISTIC HEALTH</p>
+              <component-green-bar></component-green-bar>
+            </div>
+          </div>
+        </main>
+      </section>
+      
+      <section class="wrapper__section-two">
+        <main class="container section-two">
+          <header class="title-section">
+            <div>
+              <p>LATEST ARTICLES</p>
+              <component-green-bar></component-green-bar>
+            </div>
+          </header>
+          <div class="cards_container">
+            <component-article-card></component-article-card>
+            <component-article-card></component-article-card>
+            <component-article-card></component-article-card>
+          </div>
+        </main>
+      </section>
+      
+      <section class="wrapper__section-three">
+        <main class="container section-three">
+          <div class="image__about-container"></div>
+          <div class="info_container">
+            <div class="about-content">
+              <header class="about-header">
+                <p>ABOUT</p>
+                <component-green-bar></component-green-bar>
+              </header>
+              <div class="about-text">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur <br />
+                  adipisicing elit. Nesciunt quisquam ipsa <br />
+                  facilis placeat beatae facere nostrum <br />
+                  blanditiis maiores ad dolor, iure quae! <br />
+                  Atque quibusdam recusandae corrupti <br />
+                  distinctio tempora optio non? <br />
+                </p>
+              </div>
+            </div>
+          </div>
+        </main>
+      </section>
+      
+      <section class="wrapper__section-four">
+          <div class="subscribe__container">
+              <div>
+                  <header class="subscribe-title">
+                      <p>SUBSCRIBE</p>
+                      <p>Sign-up to out newsletter</p>
+                  </header>
+                  <div class="form-container">
+                      <form action="">
+                          <label for="">
+                              <input type="email" placeholder="Your email">
+                          </label>
+                          <button type="button">SUBMIT</button>
+                      </form>
+                  </div>
+              </div>
+          </div>
+          <div class="footer-wrapper">
+            <footer class="footer-container">
+              <div>
+                  <ul class="social__network-list">
+                      <li><a href="#"><i class="fab fa-discord"></i></a></li>
+                      <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                      <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+                      <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                  </ul>
+              </div>
+              <div class="nav-wrapper">
+                <nav class="footer__nav-list">
+                  <ul class="list">
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">ARTICLES</a></li>
+                    <li><a href="#">SUBSCRIBE</a></li>
+                  </ul>
+                </nav>
+              </div>
+            </footer>
+          </div>
+      </section>
+      
+</div>
