--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -3,6 +3,14 @@
 
 $padding-container: 1rem;
 
+
+.global-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+
 section {
   width: 100%;
   height: 100vh;
@@ -12,7 +20,6 @@ section {
   width: 100%;
   height: 100vh;
 
-  background: red;
   padding: $padding-container;
 
   .container {
@@ -21,22 +28,36 @@ section {
 
     display: flex;
     justify-content: center;
-    background-color: green;
+    background-image: url(/assets/images/banner.jpg);
+    background-size: cover;
   }
 
   .desktop__nav-container {
-    background-color: yellow;
     width: 100%;
+
+    padding: 1.5rem;
 
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     position: absolute;
     right: 0;
 
     .list {
       display: flex;
+      align-items: center;
       gap: 2rem;
+    }
+
+    .list li a {
+      color: black;
+      font-size: 1.1rem;
+    }
+
+    .logo a {
+      color: black;
+      font-size: 1.5rem;
     }
   }
 
@@ -48,6 +69,23 @@ section {
       display: flex;
       align-items: center;
       flex-direction: column;
+    }
+
+    span {
+      color: $primary-color;
+      font-size: 5rem;
+      font-weight: 600;
+      letter-spacing: .5rem;
+    }
+
+    p {
+      font-size: 1.8rem;
+      font-weight: 300;
+    }
+
+    .green-bar {
+      background-color: $primary-color;
+      width: 3rem;
     }
   }
 }
@@ -84,7 +122,6 @@ section {
 .wrapper__section-three {
   width: 100%;
   background: yellow;
-  padding: $padding-container;
 
   .container {
     @include fullScreenPercentage();
@@ -93,7 +130,10 @@ section {
 
   .image__about-container {
     width: 50%;
-    background: red;
+    background-image: url(/assets/images/banner.jpg);
+    background-size: cover;
+    background-position-x: right;
+    background-position-y: bottom;
   }
 
   .info_container {
@@ -195,3 +235,11 @@ section {
     gap: 2rem;
   }
 }
+
+
+.btn-subscribe {
+  padding: .5rem 1.5rem;
+  border: .18rem solid black;
+  background-color: transparent;
+}
+
