--- a/src/app/components/article-card/article-card.component.html
+++ b/src/app/components/article-card/article-card.component.html
@@ -4,8 +4,8 @@
         <div class="content">
             <component-green-bar></component-green-bar>
             <div class="description__content-card">
-                <p>How to go deep into</p>
-                <p>the mind and hope</p>
+                <p>How to go deep into the</p>
+                <p>mind and hope</p>
             </div>
         </div>
     </div>
