--- a/src/app/components/green-bar/green-bar.component.scss
+++ b/src/app/components/green-bar/green-bar.component.scss
@@ -1,6 +1,8 @@
+@import 'palette';
+
 .green-bar {
   display: inline-block;
-  background: red;
+  background-color: $primary-color;
   width: 1.5rem;
   height: .3rem;
 }
