finidh desktop layout

--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -80,7 +80,7 @@
                           <label for="">
                               <input type="email" placeholder="Your email">
                           </label>
-                          <button type="button">SUBMIT</button>
+                          <button type="button" class="btn-subscribe">SUBMIT</button>
                       </form>
                   </div>
               </div>
