--- a/src/theme/palette.scss
+++ b/src/theme/palette.scss
@@ -5,7 +5,7 @@ $primary-color-dark: #2b2b2b;
 $primary-color-darker: #1a1a1a;
 $primary-color-darkest: #0f0f0f;
 $primary-color-light: #e9e8e4;
-$primary-color-lightest: #f5f5f5;
+$primary-color-lightest: #a1a1a1e1;
 $primary-color-transparent: rgba(76, 81, 75, 0.5);
 
 
