--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -4,11 +4,11 @@
 $padding-container: 1rem;
 
 
-.global-wrapper {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-}
+// .global-wrapper {
+//     display: flex;
+//     flex-direction: column;
+//     gap: 2rem;
+// }
 
 
 section {
@@ -134,7 +134,6 @@ section {
 
 .wrapper__section-three {
   width: 100%;
-  background: yellow;
 
   .container {
     @include fullScreenPercentage();
@@ -151,7 +150,6 @@ section {
 
   .info_container {
     width: 50%;
-    background: green;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -167,6 +165,12 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    p {
+      font-size: 2.5rem;
+      font-weight: 400;
+      color: $primary-color;
+    }
   }
 
   .about-text {
@@ -174,6 +178,8 @@ section {
   }
   .about-text > p {
     word-wrap: wrap;
+    font-size: 1.2rem;
+    color: $primary-color-lightest;
   }
 }
 
@@ -183,7 +189,7 @@ section {
 
   .subscribe__container {
     flex: 1;
-    background: green;
+    background: $primary-color-light;
 
     display: flex;
     align-items: center;
@@ -191,7 +197,16 @@ section {
   }
 
   .subscribe-title {
-      text-align: center;
+    text-align: center;
+    margin-bottom: 2rem;
+    & :nth-child(1) {
+      font-size: 2.2rem;
+      color: $primary-color;
+    }
+    & :nth-child(2) {
+      font-size: 1.3rem;
+      font-weight: 300;
+    }
   }
 
   .form-container {
@@ -201,12 +216,30 @@ section {
   .form-container form {
       display: flex;
       flex-direction: column;
+      align-items: center;
+
+      input {
+        width: 100%;
+        height: 3.5rem;
+        border: none;
+        border: 1px solid $primary-color;
+        background: white;
+        font-size: 1.2rem;
+        color: $primary-color-lightest;
+        padding: 0 1rem;
+        margin-bottom: 1rem;
+      }
+
+      button {
+        width: 55%;
+        margin-top: 2.5rem;
+        font-size: 1rem;
+      }
   }
 
   .footer-wrapper {
     width: 100%;
     height: 30vh;
-    background: red;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -215,7 +248,6 @@ section {
 
   .footer-container {
     width: 100%;
-    background: green;
 
     display: flex;
     justify-content: space-between;
@@ -229,23 +261,37 @@ section {
   .social__network-list {
     gap: 1rem;
   }
-
+  
   .social__network-list li {
     width: 2rem;
     height: 2rem;
-    background: pink;
+    background: $primary-color;
     display: flex;
     align-items: center;
     justify-content: center;
 
     border-radius: 50%;
+
+   a {
+     color: white;
+   }
   }
 
-  .nav-wrapper {
+  .nav-wrapper .list{
+    color: $primary-color
   }
 
-  .footer__nav-list .list {
+  .footer__nav-list  .list {
     gap: 2rem;
+    
+    li {
+      font-size: 1.2rem;
+      
+    }
+
+    li a {
+      color: black;
+    }
   }
 }
 
