--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -4,11 +4,11 @@
 $padding-container: 1rem;
 
 
-// .global-wrapper {
-//     display: flex;
-//     flex-direction: column;
-//     gap: 2rem;
-// }
+.global-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 
 
 section {
