--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -12,7 +12,6 @@ $padding-container: 1rem;
 
 section {
   width: 100%;
-  height: 100vh;
 }
 
 .wrapper__section-one {
@@ -92,7 +91,7 @@ section {
 .wrapper__section-two {
   width: 100%;
   background: $primary-color-light;
-  padding: $padding-container;
+  padding: 8rem 0;
 
   .container {
     @include fullScreenPercentage();
@@ -133,6 +132,7 @@ section {
 
 .wrapper__section-three {
   width: 100%;
+  height: 100vh;
 
   .container {
     @include fullScreenPercentage();
@@ -185,8 +185,9 @@ section {
 .wrapper__section-four {
   display: flex;
   flex-direction: column;
-
+  
   .subscribe__container {
+    padding: 8rem 0;
     flex: 1;
     background: $primary-color-light;
 
@@ -301,3 +302,53 @@ section {
   background-color: transparent;
 }
 
+
+@include responsive(phone) {
+
+  .wrapper__section-one {
+    .desktop__nav-container {
+      display: none;
+    }
+  }
+  .cards_container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .wrapper__section-two {
+    padding: 1rem 0;
+  }
+
+  .wrapper__section-three {
+    height: auto;
+    main {
+      display: flex;
+      flex-direction: column;
+    }
+
+    main .image__about-container {
+      width: 100%;
+      height: 24rem;
+    }
+
+    main .info_container {
+      width: 100%;
+      padding: 2rem 3rem;
+    }
+  }
+
+
+
+  .wrapper__section-four {
+    .subscribe__container {
+      padding: 5rem 2rem;
+    }
+
+    footer {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
+  }
+}
