--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -2,25 +2,25 @@
 
 @mixin responsive($breakpoint) {
     @if $breakpoint == phone {
-        @media only screen and (min-windth: 600px) {
+        @media only screen and (max-width: 600px) {
             @content;
         }
     }  
     
     @if $breakpoint == tab {
-        @media only screen and (min-width: 900px) {
+        @media only screen and (max-width: 900px) {
             @content;
         }
     }
 
     @if $breakpoint == tab-land {
-        @media only screen and (min-width: 1400px) {
+        @media only screen and (max-width: 1400px) {
             @content;
         }
     }
 
     @if $breakpoint == big-desktop {
-        @media only screen and (min-width: 1800px) {
+        @media only screen and (max-width: 1800px) {
             @content;
         }
     }
