--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -55,12 +55,12 @@
           </header>
           <div class="about-text">
             <p>
-              Lorem ipsum dolor sit amet consectetur <br />
-              adipisicing elit. Nesciunt quisquam ipsa <br />
-              facilis placeat beatae facere nostrum <br />
-              blanditiis maiores ad dolor, iure quae! <br />
-              Atque quibusdam recusandae corrupti <br />
-              distinctio tempora optio non? <br />
+              Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Nesciunt quisquam ipsa
+              facilis placeat beatae facere nostrum
+              blanditiis maiores ad dolor, iure quae!
+              Atque quibusdam recusandae corrupti
+              distinctio tempora optio non?
             </p>
           </div>
         </div>
