--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -174,7 +174,7 @@ section {
 
   .about-text {
     margin-top: 2rem;
-    padding: 0 8rem;
+    padding: 0 10rem;
   }
   .about-text > p {
     word-wrap: wrap;
@@ -357,6 +357,10 @@ section {
 
     .about-header p {
       font-size: 2rem;
+    }
+    
+    .about-text {
+      padding: 0;
     }
 
     .about-text > p {
